--- a/angular-client/src/app/components/resources/view-resources/view-resources.component.html
+++ b/angular-client/src/app/components/resources/view-resources/view-resources.component.html
@@ -1,20 +1,21 @@
+<div class="tab-content">
   <div class="sortNSearchToolbar">
-  <mat-form-field>
-    <mat-select placeholder="Sort by" [(value)]="sortProperty">
-      <mat-option value="name">Name</mat-option>
-      <mat-option value="updatedAt">Updated</mat-option>
-    </mat-select>
-  </mat-form-field>
-  <button mat-raised-button (click)="reverse=!reverse" class="reverseBtn">{{reverse? 'Descending': 'Ascending'}}</button>
-  <mat-form-field class="searchBox">
-      <input matInput  placeholder="Search" [(ngModel)]="query" >
-  </mat-form-field>
+    <mat-form-field>
+      <mat-select placeholder="Sort by" [(value)]="sortProperty">
+        <mat-option value="name">Name</mat-option>
+        <mat-option value="updatedAt">Updated</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <button mat-raised-button (click)="reverse=!reverse" class="reverseBtn">{{reverse? 'Descending': 'Ascending'}}</button>
+    <mat-form-field class="searchBox">
+      <input matInput placeholder="Search" [(ngModel)]="query">
+    </mat-form-field>
   </div>
 
-  <mat-card  *ngFor="let resource of ((resources| search:'name':query) | orderBy: sortProperty: reverse)" >
+  <mat-card *ngFor="let resource of ((resources| search:'name':query) | orderBy: sortProperty: reverse)">
     <div *ngIf="!(editingResource == resource)">
       <mat-card-header>
-        <mat-card-title>Name: {{resource.name}}</mat-card-title>        
+        <mat-card-title>Name: {{resource.name}}</mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <p *ngIf="resource.location && resource.location !== ''">Location: {{resource.location}}</p>
@@ -25,7 +26,7 @@
             <p *ngIf="resource.term  && resource.term !== ''">Term: {{resource.term}}</p>
             <p *ngIf="resource.gender && resource.gender !== ''">Gender: {{resource.gender}}</p>
             <p *ngIf="resource.constraints && resource.constraints[0] !== ''">Constraints: {{resource.constraints}}</p>
-          </ng-container>     
+          </ng-container>
           <ng-container *ngSwitchCase="'Medical'">
             <p *ngIf="resource.without_cost  && resource.without_cost !== ''">Free: {{resource.without_cost}}</p>
             <p *ngIf="resource.waitlist_time && resource.waitlist_time !== ''">Approximate Waitlist: {{resource.waitlist_time}}</p>
@@ -43,3 +44,4 @@
       <app-edit-resource [resource]="editingResource" (cancel)="cancel()"></app-edit-resource>
     </div>
   </mat-card>
+</div>
