--- a/angular-client/src/app/components/participants/view-participants/view-participants.component.css
+++ b/angular-client/src/app/components/participants/view-participants/view-participants.component.css
@@ -3,10 +3,11 @@
   width: 400px;
 }
 
-.example-header-image {
-  background-image: url('https://orig00.deviantart.net/dca3/f/2012/006/0/5/princess_luna_facebook_profile_picture_season_2_by_wisami-d4lgj08.jpg');
-  background-size: cover;
-  background-position: calc(50% - 0px) 20%;
+.avatar {
+  background-color: purple; /* TODO */
+  line-height: 2.5;
+  text-align: center;
+  color: white;
 }
 
 a{
