Tab navigation for participants and minor trashbin bug ref #98

--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -10,7 +10,7 @@
       <button mat-button>Resources</button>
     </a>
     <a class="nav-link" routerLink="dashboard/phonelog">
-      <button mat-button>Phonelog</button>
+      <button mat-button>Phone Log</button>
     </a>
   </span>
   <span class="example-fill-remaining-space"></span>
