--- a/angular-client/src/app/components/phonelog/add-phonelog/add-phonelog.component.css
+++ b/angular-client/src/app/components/phonelog/add-phonelog/add-phonelog.component.css
@@ -1,5 +1,5 @@
 button{
-    margin-top: 18px;
+    margin-top: 1.9rem;
 }
 
 form {
@@ -7,7 +7,7 @@ form {
 }
 
 mat-form-field {
-    margin-right: 1em;
+    margin-right: 1rem;
 }
 
 .notes {
@@ -15,7 +15,7 @@ mat-form-field {
 }
 
 .pronouns {
-    width: 100px;
+    width: 10rem;
 }
 
 
