--- a/angular-client/src/styles.css
+++ b/angular-client/src/styles.css
@@ -18,8 +18,22 @@ body {
     line-height: 1.7;
 }
 
-p {
-  font-size: 1.6em;
+div, p {
+ font-size: 1.6rem; 
+}
+
+.text-field-name {
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+
+.text-field-value {
+  font-size: 1.6rem;
+  font-weight: 200;
+}
+
+.text-content {
+  font-size: 1.6rem;
 }
 
 .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
