Resets to a fresh form without errors after adding a resource. #99

--- a/angular-client/src/app/components/resources/add-resource/add-resource.component.html
+++ b/angular-client/src/app/components/resources/add-resource/add-resource.component.html
@@ -1,6 +1,6 @@
 <div>
 <mat-card>
-  <form class="form" [formGroup]="form" (ngSubmit)="submit()" novalidate>
+  <form class="form" [formGroup]="form" #f="ngForm" (ngSubmit)="submit()" novalidate>
     <mat-select placeholder="Resource Type" formControlName="kind">
         <mat-option *ngFor="let type of resourceTypes" [value]="type">{{type}}</mat-option>
     </mat-select>
