Resets to a fresh form without errors after logging a phone call. #99

--- a/angular-client/src/app/components/phonelog/add-phonelog/add-phonelog.component.html
+++ b/angular-client/src/app/components/phonelog/add-phonelog/add-phonelog.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <form [formGroup]="phonelog">
+  <form [formGroup]="phonelog" #f="ngForm">
 
     <div class="caller-name">
       <mat-form-field>
