--- a/angular-client/src/app/components/participants/add-participant/add-participant.component.html
+++ b/angular-client/src/app/components/participants/add-participant/add-participant.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <form [formGroup]="form" (ngSubmit)="onSubmit() && form.reset()" novalidate>
+  <form [formGroup]="form"  #f="ngForm" (ngSubmit)="onSubmit() && form.reset()" novalidate>
 
     <mat-form-field>
       <input placeholder="Name" matInput formControlName="name">
