Resets to a fresh form without errors after adding a new task. #99

--- a/angular-client/src/app/components/tasks/tasks.component.html
+++ b/angular-client/src/app/components/tasks/tasks.component.html
@@ -9,7 +9,7 @@
         <div *ngIf="!tasks">
             You've completed all your tasks!
         </div>
-        <form [formGroup]="form" (ngSubmit)="saveTask()">
+        <form [formGroup]="form" #f="ngForm" (ngSubmit)="saveTask()">
             <mat-form-field>
                 <input matInput type="text" placeholder="Add task" formControlName="description"/>
                 <button [disabled]="form.invalid" mat-button matSuffix mat-icon-button aria-label="Add">
