--- a/angular-client/src/app/components/documents/documents.component.html
+++ b/angular-client/src/app/components/documents/documents.component.html
@@ -15,7 +15,9 @@
     <h4>Attachments:</h4>
     <mat-grid-list cols="2" *ngFor="let doc of document.attachment">
       <!-- <mat-grid-tile> -->
-      <img [src]="doc">
+      <!-- <img [src]="doc"> -->
+      <h5>Hola</h5>
+      <pdf-viewer src="https://patentimages.storage.googleapis.com/b8/ca/ea/a46e214ae80252/US6276176.pdf"></pdf-viewer>
       <!-- </mat-grid-tile> -->
     </mat-grid-list>
     <br>
