--- a/angular-client/src/app/components/casefiles/case-modal/case-modal.component.html
+++ b/angular-client/src/app/components/casefiles/case-modal/case-modal.component.html
@@ -1,13 +1,13 @@
 <h1 mat-dialog-title>New Case</h1>
 <h5>Participant: {{data.participant.name}}</h5>
-<form>
+<form #caseForm="ngForm">
   <mat-form-field>
-    <mat-select placeholder="Case Type" name="caseType" [(ngModel)]="mycase.type">
+    <mat-select required placeholder="Case Type" name="caseType" [(ngModel)]="mycase.type">
       <mat-option *ngFor="let type of resourceTypes" [value]="type">{{type}}</mat-option>
     </mat-select>
   </mat-form-field>
   <p class="hint">Select urgency of request</p>
-  <mat-radio-group [(ngModel)]="mycase.urgency" name="urgency" ng-checked="urgency[0]">
+  <mat-radio-group required [(ngModel)]="mycase.urgency" name="urgency" ng-checked="urgency[0]">
     <mat-radio-button *ngFor="let urgency of urgencies" [value]="urgency">{{urgency}}&nbsp;&nbsp;</mat-radio-button>
   </mat-radio-group>
   <mat-form-field>
@@ -22,7 +22,7 @@
     </mat-select>
   </mat-form-field>
   <mat-dialog-actions>
-      <button mat-button (click)="submit()">Submit</button>
+      <button [disabled]="!caseForm.valid" mat-button (click)="submit()">Submit</button>
       <button mat-button (click)="cancel()">Cancel</button>
   </mat-dialog-actions>
 </form>
