--- a/angular-client/src/app/components/resources/resources.component.html
+++ b/angular-client/src/app/components/resources/resources.component.html
@@ -1,8 +1,8 @@
-<mat-tab-group (selectedTabChange)="changeTab()">
+<mat-tab-group (selectedTabChange)="changeTab()" [(selectedIndex)]="currentTab">
   <mat-tab label="Resources">
     <app-view-resources [hasTabChanged]="hasTabChanged"></app-view-resources>
   </mat-tab>
   <mat-tab label="Add Resource">
-    <app-add-resource></app-add-resource>
+    <app-add-resource (addedResource)="viewResourcesTab()"></app-add-resource>
   </mat-tab>
 </mat-tab-group>
