--- a/angular-client/src/app/components/participants/participants.component.html
+++ b/angular-client/src/app/components/participants/participants.component.html
@@ -1,8 +1,8 @@
-<mat-tab-group (selectedTabChange)="changeTab()">
+<mat-tab-group (selectedTabChange)="changeTab()" [(selectedIndex)]="currentTab">
         <mat-tab label="Participants">
           <app-view-participants [hasTabChanged]="hasTabChanged"></app-view-participants>
         </mat-tab>
         <mat-tab label="Add Participant">
-          <app-add-participant></app-add-participant>
+          <app-add-participant (addedParticipant)="viewParticipantsTab()"></app-add-participant>
         </mat-tab>
 </mat-tab-group>
