--- a/angular-client/src/colourStyles.scss
+++ b/angular-client/src/colourStyles.scss
@@ -1,10 +1,10 @@
 @import '~@angular/material/theming';
 @include mat-core();
 
-// TODO set color theme here:
-// $primary: mat-palette($mat-orange, 800);
-// $accent:  mat-palette($mat-light-blue, 600, 100, 800);
-// $warn:    mat-palette($mat-red, 600);
-// $theme: mat-light-theme($primary, $accent, $warn);
+$primary: mat-palette($mat-deep-purple, 400, 100, 900);
+$accent: mat-palette($mat-pink, A200);
+$warn:    mat-palette($mat-pink, A400);
+$theme: mat-light-theme($primary, $accent, $warn);
 
-// @include angular-material-theme($theme);
+@include angular-material-theme($theme);
+
