#43 Added color to trash bin and confirm modal

--- a/angular-client/src/app/components/phonelog/view-phonelog/view-phonelog.component.html
+++ b/angular-client/src/app/components/phonelog/view-phonelog/view-phonelog.component.html
@@ -57,9 +57,13 @@
 
             </mat-card-content>
             <mat-card-actions>
+                <button mat-raised-button (click)="resolve(log)">
+                    <mat-icon class="success-font">check_circle</mat-icon>
+                    Resolve
+                </button>
                 <button mat-raised-button (click)="edit(log)">Edit</button>
                 <button mat-raised-button (click)="delete(log)">Delete</button>
-                <button mat-raised-button (click)="resolve(log)">Resolve</button>
+                
 
             </mat-card-actions>
         </div>
