--- a/angular-client/src/app/components/trashbin/trashbin.component.html
+++ b/angular-client/src/app/components/trashbin/trashbin.component.html
@@ -51,7 +51,7 @@
             <button mat-icon-button color="primary" (click)="restore(item.model, item._id)">
               <mat-icon matSuffix>unarchive</mat-icon>
             </button>
-            <button mat-icon-button color="primary" (click)="delete(item.model, item._id)">
+            <button mat-icon-button color="warn" (click)="delete(item.model, item._id)">
               <mat-icon matSuffix>delete_forever</mat-icon>
             </button>
           </div>
