#43 Added: trash bin styles

--- a/angular-client/src/app/components/trashbin/trashbin.component.css
+++ b/angular-client/src/app/components/trashbin/trashbin.component.css
@@ -1,6 +1,5 @@
 mat-card {
     width: 66%;
-    margin: 1em;
 }
 
 .container {
@@ -18,5 +17,5 @@ mat-card {
 }
 
 .items div p {
-    margin-right: 1em;
+    margin-right: 1rem;
 }
