#43 Fix trash bin deleting last one

--- a/angular-client/src/app/components/reports/reports.component.html
+++ b/angular-client/src/app/components/reports/reports.component.html
@@ -1,4 +1,4 @@
 <mat-card>
     <mat-card-title>Reports</mat-card-title>
-    <mat-card-content>Nothing to show</mat-card-content>
+    <p>Nothing to show</p>
 </mat-card>
