--- a/angular-client/src/app/components/dashboard/activity/activity.component.html
+++ b/angular-client/src/app/components/dashboard/activity/activity.component.html
@@ -2,7 +2,7 @@
   <mat-card-title>Recent Case File Activity</mat-card-title>
   <div *ngIf="recentlyUpdatedCasefiles">
     <div *ngFor="let casefile of recentlyUpdatedCasefiles">
-      <p>Participant: {{casefile.participant.name}} - Last update: {{casefile.updatedAt | date: 'short'}}</p>
+      <p><b>Participant:</b> {{casefile.participant.name}} - Last update: {{casefile.updatedAt | date: 'short'}}</p>
     </div>
   </div>
   <p *ngIf="!recentlyUpdatedCasefiles">No recent activity</p>
@@ -12,7 +12,7 @@
   <mat-card-title>Recent Phone Log Activity</mat-card-title>
   <div *ngIf="recentlyUpdatedPhonelog">
     <div *ngFor="let phonelog of recentlyUpdatedPhonelog">
-      <p>Caller: {{phonelog.name}} - Last update: {{phonelog.updatedAt | date: 'short'}}</p>
+      <p><b>Caller:</b> {{phonelog.name}} - Last update: {{phonelog.updatedAt | date: 'short'}}</p>
     </div>
   </div>
   <p *ngIf="!recentlyUpdatedPhonelog">No recent activity</p>
