--- a/angular-client/src/colourStyles.scss
+++ b/angular-client/src/colourStyles.scss
@@ -2,8 +2,8 @@
 @include mat-core();
 
 $primary: mat-palette($mat-deep-purple, 400, 100, 900);
-$accent: mat-palette($mat-pink, A200);
-$warn:    mat-palette($mat-pink, A400);
+$accent: mat-palette($mat-blue, 300);
+$warn:    mat-palette($mat-pink, A200);
 $theme: mat-light-theme($primary, $accent, $warn);
 
 @include angular-material-theme($theme);
