--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
   <span *ngIf="this.authenticationService.loggedIn">
     <a class="nav-link" routerLink="dashboard">
-      <button mat-button class="nav-logo">SocialWorker</button>
+      <button mat-button class="nav-logo">Axiona</button>
     </a>
     <a class="nav-link" routerLink="participants">
       <button mat-button>Participants</button>
