--- a/angular-client/src/app/components/casefiles/active-casefiles/active-casefiles.component.css
+++ b/angular-client/src/app/components/casefiles/active-casefiles/active-casefiles.component.css
@@ -1,4 +1,18 @@
 mat-icon {
     font-size: 2rem;
-    margin-left: 5px;
+    margin-left: 0.5rem;
+}
+
+.title {
+    width: 10%;
+}
+
+.viewBtn {
+    margin: 1rem;
+}
+
+.heading {
+    font-size: 2.4rem;
+    font-weight: 400;
+    margin-bottom: 1rem;
 }
