--- a/angular-client/src/app/components/users/view-users/view-users.component.css
+++ b/angular-client/src/app/components/users/view-users/view-users.component.css
@@ -1,4 +1,16 @@
-.example-card {
-    margin: 1em;
-    width: 400px;
-  }
+.user-card {
+    margin: 1rem;
+    width: 40rem;
+}
+
+.user-card mat-card-content {
+  display: flex;
+}
+
+.user-name {
+  font-weight: 500;
+}
+
+.info {
+  flex: 1;
+}
