--- a/angular-client/src/app/components/phonelog/phonelog.component.html
+++ b/angular-client/src/app/components/phonelog/phonelog.component.html
@@ -1,8 +1,10 @@
-<mat-tab-group (selectedTabChange)="changeTab()" [(selectedIndex)]="currentTab">
+<div class="white-container">
+  <mat-tab-group (selectedTabChange)="changeTab()" [(selectedIndex)]="currentTab">
     <mat-tab label="View Phonelog">
       <app-view-phonelog [reloadPhonelogs]="isViewActive"></app-view-phonelog>
     </mat-tab>
     <mat-tab label="Log a phone call">
       <app-add-phonelog (loggedPhonecall)="viewLogsTab()"></app-add-phonelog>
     </mat-tab>
-</mat-tab-group>
+  </mat-tab-group>
+</div>
