--- a/angular-client/src/app/components/users/users.component.html
+++ b/angular-client/src/app/components/users/users.component.html
@@ -1,14 +1,12 @@
-<div class="tab-group">
-<nav mat-tab-nav-bar>
-  <a mat-tab-link
-     *ngFor="let link of navLinks"
-     [routerLink]="link.path"
-     routerLinkActive #rla="routerLinkActive"
-     [active]="rla.isActive">
-    {{link.label}}
-  </a>
-</nav>
+<div class="white-container">
+  <div class="tab-group">
+    <nav mat-tab-nav-bar>
+      <a mat-tab-link *ngFor="let link of navLinks" [routerLink]="link.path" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
+        {{link.label}}
+      </a>
+    </nav>
 
-<router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 
+  </div>
 </div>
