--- a/angular-client/src/styles.css
+++ b/angular-client/src/styles.css
@@ -14,7 +14,7 @@
   --warning: #ff4081;
   --accent: #64b5f6;
   --primary: #7e57c2;
-  --light: #fafafa;
+  --light: #f5f5f5;
 }
 
 html {
@@ -79,6 +79,15 @@ div, p {
   background-color: var(--accent);
 }
 
+.white-container {
+  background-color: white;
+  padding: 2rem;
+}
+
+.containment {
+  margin: 2rem;
+}
+
 .text-field-name {
   font-size: 1.6rem;
   font-weight: 500;
@@ -93,11 +102,6 @@ div, p {
   font-size: 1.6rem;
 }
 
-.mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
-  border-color: rgb(64, 48, 117);
-}
-
-
 div.sortNSearchToolbar{
   margin-top: 2.5rem;
 }
@@ -105,6 +109,11 @@ div.sortNSearchToolbar{
 mat-form-field.searchBox{
   padding-left: 0.5rem;
 }
+
+.mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
+  border-color: var(--primary);
+}
+
 
 .mat-radio-button.mat-accent .mat-radio-inner-circle {
   background-color: rgb(	136, 45, 96);
