--- a/angular-client/src/app/components/phonelog/add-phonelog/add-phonelog.component.css
+++ b/angular-client/src/app/components/phonelog/add-phonelog/add-phonelog.component.css
@@ -1,13 +1,13 @@
 button{
-    margin-top: 1.9rem;
-}
-
-form {
-    width: 60%;
+    margin-top: 3rem;
 }
 
 mat-form-field {
     margin-right: 1rem;
+}
+
+.phonecall-card {
+    margin: 2rem;
 }
 
 .notes {
