PDF is being rendered natively by the browser. Also Notes is only images and Documents is only PDF

--- a/angular-client/src/app/components/notes/notes.component.css
+++ b/angular-client/src/app/components/notes/notes.component.css
@@ -1,1 +1,5 @@
-@import '../participants/participant-profile/participant-profile.component.css'
+@import '../participants/participant-profile/participant-profile.component.css';
+img {
+    max-width: 400px;
+    max-height: 600px;
+}
