--- a/angular-client/src/app/components/documents/document-modal/document-modal.component.html
+++ b/angular-client/src/app/components/documents/document-modal/document-modal.component.html
@@ -2,12 +2,12 @@
 <mat-dialog-content>
   <form>
     <mat-form-field>
-      <textarea matInput placeholder="Document Type" name="text" matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="5"
+      <textarea matInput placeholder="Document description" name="text" matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="5"
         [(ngModel)]="document.type"></textarea>
     </mat-form-field>
     <div class="fileupload">
       <h4>Upload Document</h4>
-      <input type="file" #upload (change)="handleFileInput(upload.files)">
+      <input type="file" #upload (change)="handleFileInput(upload.files)" accept="application/pdf">
     </div>
   </form>
 </mat-dialog-content>
