--- a/angular-client/src/app/components/notes/note-modal/note-modal.component.html
+++ b/angular-client/src/app/components/notes/note-modal/note-modal.component.html
@@ -2,12 +2,12 @@
 <mat-dialog-content>
   <form>
     <mat-form-field>
-      <textarea matInput placeholder="Your note" name="text" matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="5"
+      <textarea matInput placeholder="Note description" name="text" matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="5"
         [(ngModel)]="note.text"></textarea>
     </mat-form-field>
     <div class="fileupload">
       <h4>Upload File</h4>
-      <input type="file" #upload (change)="handleFileInput(upload.files)">
+      <input type="file" #upload (change)="handleFileInput(upload.files)" accept="image/*">
     </div>
   </form>
 </mat-dialog-content>
