--- a/angular-client/src/app/components/phonelog/view-phonelog/view-phonelog.component.css
+++ b/angular-client/src/app/components/phonelog/view-phonelog/view-phonelog.component.css
@@ -10,3 +10,49 @@
 .phonecall-actions {
     margin: 0;
 }
+
+.caller,
+.caller-type,
+.caller-phone,
+.caller-date,
+.caller-heading,
+.caller-subject,
+.urgency,
+.logger {
+    display: flex;
+}
+
+.label {
+    font-weight: 600;
+    margin-right: 1rem;
+}
+
+.caller-name {
+    font-weight: 500;
+    text-transform: capitalize;
+    margin-bottom: 1rem;
+}
+
+.caller-pronouns {
+    font-weight: 100;
+    margin-left: 1rem;
+}
+
+.urgency {
+    margin-left: 1rem;
+}
+
+.urgency mat-icon {
+    font-size: 1.6rem;
+}
+
+.call-text {
+    border: .1rem solid var(--light);
+    padding: 1rem;
+}
+
+.logger .label,
+.logger {
+    font-weight: 200;
+}
+
